# data-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml
dataservice/: config.py  data_service.py  server.py
dataservice/proto/: dataservice.proto  dataservice_pb2.py  dataservice_pb2.pyi  dataservice_pb2_grpc.py
scripts/: devcontainer_post_create.sh  generate_grpc_code.sh  serve_test_coverage_html_report.sh
tests/: test_config.py  test_get_data.py  test_server.py
tests/assets/: test_dataset.arrow
tests/data_service/: test_delete_dataset.py  test_get_data.py  test_grpc_server.py  test_ingest_data.py
