[tool.poetry]
name = "dataservice"
version = "0.1.0"
description = ""
authors = ["Guilherme <g.lisboa.oliveira@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = {extras = ["s3"], version = "^1.34.6"}
pyarrow = "^14.0.2"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
grpcio = "^1.60.0"


[tool.poetry.group.dev.dependencies]
boto3-stubs = {version = "1.34.6", extras = ["s3"]}
pytest = "^7.4.3"
grpcio-tools = "^1.60.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"